Publish Post source/_posts/多的服务器没处用？快来逝世自建梯子!.md by Qexo

--- a/source/_posts/多的服务器没处用？快来逝世自建梯子!.md
+++ b/source/_posts/多的服务器没处用？快来逝世自建梯子!.md
@@ -3,13 +3,12 @@ abbrlink: ''
 categories:
 - - 教程
 date: '2023-02-03 14:25:05'
-excerpt: 你还在因机场太贵而发愁吗？快来看看这个！ 废话不多说直接开始（ 必读 不要使用大厂的服务器！不要使用大厂的服务器！不要使用大厂的服务器！ 你需要的  一台会留学的服务器(最好是~~不知名idc的~~或dd纯净镜像重装过的)
-  一个脑子 食谱(?)  使用趁手的ssh工具连接服务器 粘贴并执行一下命令：    bash <(curl -Ls https://raw.githubusercontent....
+excerpt: 你还在因机场太贵而发愁吗？快来看看这个！ 废话不多说直接开始（ 必读 不要使用大厂的服务器！不要使用大厂的服务器！不要使用大厂的服务器！  你需要的  一台会留学的服务器(最好是不知名idc的或dd纯净镜像重装过的) 一个脑子  食谱(?)   使用趁手的ssh工具连接服务器   粘贴并执行一下命令： bash &lt;(curl -Ls https://raw.githubusercontent...
 tags:
 - 教程
 - 梯子
 title: 多的服务器没处用？快来逝世自建梯子!
-updated: Sun, 05 Feb 2023 01:15:44 GMT
+updated: 2023-6-17T17:40:52.948+8:0
 ---
 你还在因机场太贵而发愁吗？快来看看这个！
 
@@ -52,4 +51,3 @@ updated: Sun, 05 Feb 2023 01:15:44 GMT
 
    ![QQ截图20230203162229](https://cdn.staticaly.com/gh/laobinghu/pic_bed@main/QQ截图20230203162229.webp)
 7. 恭喜!配置完成！
- 
